[+] add www.fresquedelabiodiversite.org

--- a/deploy/group_vars/all/vars.yml
+++ b/deploy/group_vars/all/vars.yml
@@ -7,5 +7,6 @@ main_user_uid: 1089  # must be unique for each project on the server
 public_hostnames:
   - fresquedelabiodiversite.tlscp.fr
   - fresquedelabiodiversite.org
+  - www.fresquedelabiodiversite.org
 frontend_repo: git@gitlab.com:telescoop-public/fresque-biodiversite.git
 identity_file_path: /home/ubuntu/.ssh/id_rsa
