--- a/deploy/ansible.cfg
+++ b/deploy/ansible.cfg
@@ -12,6 +12,6 @@ timeout = 30
 
 [privilege_escalation]
 # Always ask for root/sudo password
-# become = true
-# become_user = root
+become = true
+become_user = root
 # become_ask_pass = true
