feat: update deploy

--- a/deploy/group_vars/all/vars.yml
+++ b/deploy/group_vars/all/vars.yml
@@ -8,5 +8,5 @@ public_hostnames:
   - fresquedelabiodiversite.tlscp.fr
   - fresquedelabiodiversite.org
   - www.fresquedelabiodiversite.org
-frontend_repo: git@gitlab.com:telescoop-public/fresque-biodiversite.git
-identity_file_path: /home/ubuntu/.ssh/id_rsa
+frontend_repo: git@github.com:TelesCoop/fresque-biodiversite-vitrine.git
+frontend_identity_file_path: /home/{{ main_user }}/.ssh/id_ed25519_frontend
