--- a/deploy/roles/frontend/tasks/main.yml
+++ b/deploy/roles/frontend/tasks/main.yml
@@ -37,11 +37,38 @@
     - reload nginx
   become_user: root
 
+- name: Generate frontend /etc/ssh/ RSA host key
+  command: "ssh-keygen -q -t ed25519 -a 100 -f {{ frontend_identity_file_path }} -C \"\" -N \"\""
+  become_user: "{{ main_user }}"
+  args:
+    creates: "{{ frontend_identity_file_path }}"
+  register: frontend_new_ssh_key
+
+- name: WARNING ABOUT new ssh key
+  debug:
+    msg: |
+      IMPORTANT REMINDER
+
+      A new ssh key has been generated at {{ frontend_identity_file_path }}
+      - it should be added to the project deploy keys in Gitlab/Github
+      so that we can clone it.
+  when: frontend_new_ssh_key.changed
+
+- name: Get new ssh key contents
+  command: "cat {{ frontend_identity_file_path }}.pub"
+  register: command_output
+  when: frontend_new_ssh_key.changed
+
+- name: Print ssh key to console
+  debug:
+    msg: "{{command_output.stdout}}"
+  when: frontend_new_ssh_key.changed
+
 - name: get latest frontend code
   git:
     repo: '{{ frontend_repo }}'
     dest: "{{ frontend_path }}"
-    key_file: "{{ identity_file_path }}"
+    key_file: "{{ frontend_identity_file_path }}"
     accept_hostkey: true
     force: true
     version: master
